<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JuegoCRUD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registrar">Registrar</string>
    <string name="listar">Listar</string>
    <string name="volver">Volver</string>
    <string name="editar">Editar</string>
    <string name="editarimagen">Cambiar Imagen</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre">Nombre</string>
    <string name="rating">Rating</string>
    <string name="desc">Descripción</string>
    <string name="precio">Precio</string>
</resources>
