<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/desc"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal" />


    <TableRow android:stretchColumns="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Rating_Bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0" />


    </TableRow>

    <ImageView android:id="@+id/imgView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </ImageView>

    <Button android:id="@+id/btn_imagen" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0" android:text="Cargar Imagen" android:layout_gravity="center"></Button>


    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar" />
</TableLayout>